# kinobot

./: .gitignore  Cargo.toml
src/: bot.rs  data.rs  main.rs  types.rs
