[package]
name = "kinobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15", features = ["full"]}
serenity = "0.10"
rand = "0.8.4"
reqwest ={version = "0.11.8", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
